# eov

./: .gitignore  .gitmodules  Cargo.toml  README.md  data-guide.md  release-flatpak.yml
.github/workflows/: build-appimage.yml  build-flatpak.yml  build-macos-app.yml  build-windows-zip.yml  ci.yml  release-appimage.yml  release-flatpak.yml  release-windows-zip.yml
app/: Cargo.toml  build.rs
app/src/: blitter.rs  callbacks.rs  cli.rs  clipboard.rs  config.rs  extension_host.rs  file_ops.rs  gpu.rs  gpu_interop.rs  main.rs  pane_ui.rs  plugin_host.rs  render.rs  render_pool.rs  stain.rs  state.rs  test_support.rs  tile_loader.rs  tools.rs  ui_update.rs  viewport_filter.rs  zoom_display.rs
app/src/plugins/: discovery.rs  host_context.rs  manager.rs  mod.rs  registry.rs  toolbar.rs
app/ui/: app-window.slint  bottom-panel.slint  dataset-export-dialog.slint  export-dialog.slint  home-screen.slint  hud-settings.slint  hud-toolbar.slint  metadata-hud.slint  minimap.slint  panes.slint  scale-bar.slint  series-bar.slint  tab-controls.slint  theme.slint  types.slint  viewport.slint  window-toolbar.slint
assets/linux/: io.eosin.eov.desktop  io.eosin.eov.metainfo.xml
common/: Cargo.toml
common/benches/: wsi_benchmarks.rs
common/src/: cache.rs  export.rs  file_id.rs  lib.rs  overlay.rs  stain.rs  tile.rs  viewport.rs  wsi.rs
common/src/dataset/: config.rs  discovery.rs  grid.rs  metadata.rs  mod.rs  output.rs  pipeline.rs
example_plugin/: Cargo.toml
example_plugin/src/: lib.rs
example_plugins/annotations/: Cargo.toml
example_plugins/example_rust/: Cargo.toml
example_plugins/grayscale_python/: plugin.py
packaging/appimage/: README.md  build.sh
packaging/flatpak/: README.md  io.eosin.eov.yml
packaging/macos/: README.md  build.sh
packaging/shared/: build-openslide.sh
plugin_api/: Cargo.toml
plugin_api/src/: ffi.rs  host.rs  lib.rs  manifest.rs  viewport_filter.rs
plugins/eovae/: Cargo.toml  README.md  build.rs  plugin.toml
plugins/eovae/scripts/: package_eop.py
plugins/eovae/src/: analysis.rs  db.rs  filter.rs  lib.rs  model.rs  sidebar.rs  state.rs  stats.rs
plugins/eovae/ui/: eovae-sidebar.slint  eovae-viewport-grid.slint
plugins/gamepad/: Cargo.toml  plugin.toml
plugins/gamepad/src/: lib.rs  sidebar.rs  state.rs
plugins/gamepad/ui/: gamepad-sidebar.slint  gamepad-window.slint
proto/: eov_extension.proto
scripts/: fmt.sh  run-with-annotations.sh  run-with-example-plugin.sh  run-with-example-plugins.sh  run-with-plugins.sh  screenshot.sh
(+9 files in other folders)
