[package]
name = "eovae"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["export-vtable-symbol"]
export-vtable-symbol = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
abi_stable = "0.11"
common = { path = "../../common" }
ndarray = "0.17"
onnx-extractor = "0.3.5"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "api-24", "load-dynamic", "cuda"] }
plugin_api = { path = "../../plugin_api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
dirs = "6"
libloading = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.9"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
