[package]
name = "gamepad"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
abi_stable = { version = "0.11", default-features = false }
dirs = "6"
gilrs = "0.11"
plugin_api = { path = "../../plugin_api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slint = { version = "1.15.1", default-features = false, features = ["std", "compat-1-2"] }